przed wyborem stylu

--- a/mock-ups/invite.html
+++ b/mock-ups/invite.html
@@ -12,5 +12,8 @@
     <div id='inviteCard'>
         <div id='invNames' > Mark &#38; Jeny</div>
         <div id='invInformation'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea nobis voluptatem dolorem, mollitia hic dolores optio labore. Consequatur perspiciatis molestiae ratione numquam blanditiis quia! Quis blanditiis illum sequi aliquam recusandae.</div>
-    </div>
+        <div class="btnAnim">
+            <div class="example-screen inviteBtn" onClick={this.print}  >print</div>
+        </div>
+        </div>
 </body>
